--- a/src/App.css
+++ b/src/App.css
@@ -20,364 +20,4 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
-.app {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-	justify-content: space-between;
-}
-
-.main-content {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	height: min-content;
-	flex-basis: 100%;
-}
-
-.container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
-.main-header {
-	background-color: #db7533;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: 40px;
-	color: white;
-}
-
-.header-title {
-	margin-left: 3rem;
-}
-
-nav {
-	margin-right: 1rem;
-}
-
-.main-header button {
-	border: none;
-	background-color: transparent;
-}
-
-.main-header button a {
-	color: white;
-	text-decoration: none;
-}
-
-.main-header button a:hover {
-	color: #ffc49d;
-}
-
-.main-header a {
-	text-decoration: none;
-	color: white;
-}
-.main-footer {
-	background-color: #3e3e3e;
-	height: 150px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 100vw;
-	/* position: absolute;
-	bottom: 0; */
-}
-
-.main-footer > svg {
-	margin-right: 3rem;
-}
-
-.social-wrapper {
-	margin-left: 3rem;
-	color: white;
-	text-align: center;
-}
-
-.social-wrapper svg {
-	margin: 0.5rem;
-}
-
-.ad-banner-wrapper {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 50vh;
-	width: 100vw;
-}
-
-.detail {
-	height: min-content;
-}
-
-.details-banner {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 50vh;
-	width: 100vw;
-	background-size: cover;
-	background-position: center;
-	position: relative;
-}
-
-.food-title {
-	z-index: 11;
-}
-
-.overlay {
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.7);
-	z-index: 10;
-	position: absolute;
-}
-
-.banner-desc {
-	height: 100%;
-	width: 65%;
-	color: white;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 1.5rem;
-}
-
-.new {
-	font-size: 1rem;
-}
-
-.food-title {
-	font-size: 2.5rem;
-	font-weight: bold;
-	color: #db7533;
-}
-
-.desc-text {
-	text-align: center;
-	font-size: 0.9rem;
-}
-
-.blue-btn {
-	background-color: #578a8b;
-	border: none;
-	color: white;
-	padding: 5px 10px;
-	border-radius: 0.1rem;
-}
-
-.blue-btn:hover {
-	background-color: #69a5a6;
-	cursor: pointer;
-}
-
-.recipe-cards-container {
-	display: flex;
-	gap: 1.5rem;
-	min-height: min-content;
-	margin: 2rem;
-	margin-top: 0;
-}
-
-.recipe-card {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	gap: 1rem;
-	max-width: 150px;
-	min-height: min-content;
-	box-shadow: 0px 2px 3px 0px gray;
-	border-radius: 0.1rem;
-	padding-bottom: 1rem;
-}
-
-.image-title-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	font-weight: bold;
-}
-
-.recipe-card h3 {
-	font-size: 0.9rem;
-}
-
-.recipe-card img {
-	width: 100%;
-	margin-bottom: .5rem;
-}
-
-.search-wrapper {
-	position: relative;
-	margin: 1rem;
-}
-
-.search-input {
-	background-color: #f6dfd1;
-	border: none;
-	border-radius: 100px;
-	padding: 0.25rem;
-	padding-left: 1.5rem;
-	width: 200px;
-}
-
-.search-input:focus {
-	outline: none;
-}
-
-.mag {
-	width: 18px;
-	position: absolute;
-	left: 3px;
-	top: 50%;
-	transform: translateY(-50%);
-}
-
-.search-input::placeholder {
-	color: rgb(38, 38, 38);
-}
-
-.recipe-details-section {
-	display: flex;
-	align-items: flex-start;
-	justify-content: center;
-	gap: 4rem;
-	padding-top: 1rem;
-	padding-bottom: 2rem;
-	height: min-content;
-}
-
-.recipe-details-section p {
-	align-self: flex-start;
-}
-
-.details {
-	min-width: 200px;
-	padding: 1rem;
-}
-
-.instructions {
-	min-width: 300px;
-	padding: 1rem;
-}
-
-.recipe-card.instructions {
-	justify-content: flex-start;
-}
-
-.recipe-header,
-.ingredients-header,
-.instructions-title {
-	font-size: 1.65rem;
-	padding-bottom: 0.5rem;
-}
-
-.ingredients-header {
-	margin-top: 0.5rem;
-}
-
-.recipe-form-container {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	gap: .5rem;
-	padding: 1rem;
-	padding-top: 1.5rem;
-}
-
-.recipe-form-container button {
-	width: 20%;
-	align-self: center;
-}
-
-.recipe-form-container h1 {
-	align-self: center;
-	font-size: 1.25rem;
-}
-
-.recipe-form-container input[type=text],
-.recipe-form-container textarea {
-	border: 1px solid black;
-	padding: .2rem;
-}
-
-.recipe-form-container input[type=text]::placeholder,
-.recipe-form-container textarea::placeholder {
-	color: black;
-}
-
-.recipe-form {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-}
-
-.recipe-main-info {
-	display: flex;
-	justify-content: center;
-	gap: 1.5rem;
-}
-
-.radios {
-	display: flex;
-	justify-content: center;
-	text-justify: center;
-	align-items: center;
-	gap: 1.5rem;
-}
-
-#cook,
-#bake,
-#drink {
-	transform: scale(2)
-}
-
-.details-inputs {
-	display: flex;
-	gap: 1rem;
-}
-
-.ingredients-area {
-	display: flex;
-	gap: 2.5rem;
-}
-
-.ingredients-inputs {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	width: 35%;
-}
-
-.ing-container {
-	display: flex;
-	flex-direction: column;
-	gap: .5rem;
-}
-
-.ingredients-list {
-	font-size: .75rem;
-	text-decoration: underline;
-}
-
-.orange-btn {
-	background-color: #db7533;
-	border: none;
-	color: white;
-	padding: 5px 10px;
-	border-radius: 0.1rem;
-}
-
-.orange-btn:hover {
-	background-color: #ffc49d
-}
-
-input[type=radio] {
-	accent-color: #db7533;
-}
+/* --------- Begin your CSS Below here --------- */
